apps/frontend/src/css/layout.scss
@import '@/css/app-vars.scss';
@import 'bootstrap/scss/functions';
@import 'bootstrap/scss/variables';
@import 'bootstrap/scss/mixins';

html,
body {
  padding: 0;
  margin: 0;
  height: 100dvh; // dvh for mobile viewport correctness
  width: 100%;
}

body {
  overflow: hidden;
  background-image: linear-gradient(170deg, #dbc49c 0%, #e8d5b5 40%, #faf4ea 100%) !important;
  background-attachment: fixed;
}

#app {
  display: flex;
  flex-direction: column;
  height: 100dvh;
}

nav.navbar {
  position: fixed;
  left: 0;
  right: 0;
  z-index: $zindex-fixed;
  height: $navbar-height;

  // mobile: bottom tab bar
  bottom: 0;

  // desktop: top navbar
  @include media-breakpoint-up(sm) {
    bottom: auto;
    top: 0;
  }
}

main {
  flex-grow: 1;
  min-height: 0; // prevents flex item overflow clipping (iOS)
  position: relative;
}

nav.navbar + main {
  // mobile: offset for bottom navbar
  padding-bottom: $navbar-height;

  // desktop: offset for top navbar
  @include media-breakpoint-up(sm) {
    padding-bottom: 0;
    padding-top: $navbar-height;
  }
}

